# cxqweb-source

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  README.md  cxqweb-source-gradeit.cc  cxqweb-source-main.cc  cxqweb-source-questionbyquestion.cc  draftquizfile.ini  examplequeries.txt  index.html  master.css  questiongrabber.cc
listhelper/: listhelper.cc  listhelper.hh
